# ros_goldo_main

./: CMakeLists.txt  README.md  package.xml  setup.py
goldo_main/: commands.py  main.py
nodes/: node
